www16-auth-connector/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www16-auth-connector
  namespace: www16-intranet
spec:
  clusterIP: None
  selector:
    app: www16-auth-connector
  ports:
  - name: http
    port: 80
