www16-auth-connector/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www16-auth-connector
  namespace: www16-intranet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "www.auth-connector.wwwx.me"
        - "auth-connector.wwwx.me"
      secretName: www16-auth-conector-tls-secret
  rules:
  - host: www.auth-connector.wwwx.me
    http:
      paths:
      - path: /
        backend:
          serviceName: www16-auth-connector
          servicePort: 80
  - host: auth-connector.wwwx.me
    http:
      paths:
        - path: /
          backend:
            serviceName: www16-auth-connector
            servicePort: 80
